# TheGrid

./: .gitignore  CrushSesion1-4.md  MEDIA_CARE_BACKLOG_V1.md  MEDIA_CARE_BLUEPRINT_V1.md  MEDIA_CARE_DEPENDENCY_MATRIX_V1.md  MEDIA_CARE_EXISTING_PROJECT_CONNECTION_V1.md  MEDIA_CARE_MASTER_INDEX_V1.md  MEDIA_CARE_UI_WIREFRAME_V1.md  MVP_IMPLEMENTATION_CHECKLIST.md  THEGRID_CONTINUATION.md
.agents/workflows/: update-tablet-node.md
.claude/: DESIGN_AGENT_INSTRUCTIONS.md  MEDIA_CARE_CONTEXT.json  MEDIA_CARE_DESIGN_START_HERE.md
.github/: copilot-instructions.md
References and Ideas/: Google-Stitch-Design-Requirements.md
crush-logs/day0/: Day0-Readiness.md
crush-logs/week1/day1/: ExecutionCard.md  log.md
crush-logs/week1/day2/: log.md
crush-logs/week1/day3/: log.md
crush-logs/week1/day4/: log.md
crush-logs/week1/day5/: log.md
crush-logs/week1/day6/: log.md
crush-logs/week1/day7/: log.md
scripts/: unnest_node_structure.ps1
thegrid-workspace/: Cargo.toml  README.md  SETUP.md  appxmanifest.xml  diag_tablet_adb.py  gitupdate.cmd  launch_thegrid.cmd  launch_thegrid_node.cmd  llm_probe.sh  package-lock.json  package.json  packager.json  portable_install.bat  proot_probe.sh  security_bypass_guide.md  setup_networking.ps1  setup_script.iss  tg_update.sh
thegrid-workspace/.winapp/include/: .cppwinrt.rsp  WindowsAppSDK-VersionInfo.cs
thegrid-workspace/.winapp/include/winrt/: winrt.ixx
thegrid-workspace/.winapp/lib/arm64/: Microsoft.Windows.AI.MachineLearning.lib  onnxruntime.lib
thegrid-workspace/.winapp/lib/x64/: Microsoft.Windows.AI.MachineLearning.lib  onnxruntime.lib
thegrid-workspace/crates/thegrid-ai/: Cargo.toml
thegrid-workspace/crates/thegrid-ai/src/: lib.rs
thegrid-workspace/crates/thegrid-core/: Cargo.toml
thegrid-workspace/crates/thegrid-core/src/: config.rs  db.rs  events.rs  indexing.rs  lib.rs  models.rs  test_support.rs  traits.rs  utils.rs  watcher.rs
thegrid-workspace/crates/thegrid-gui/: Cargo.toml  build.rs
thegrid-workspace/crates/thegrid-gui/assets/placeholders/: README.md
thegrid-workspace/crates/thegrid-gui/src/: app.rs  cli.rs  icons.rs  main.rs  telemetry.rs  theme.rs
thegrid-workspace/crates/thegrid-gui/src/views/: boot.rs  dashboard.rs  dedup_review.rs  file_manager.rs  media_ingest.rs  mod.rs  planner.rs  project_dashboard.rs  search.rs  setup.rs  terminal.rs  timeline.rs  video_preview.rs  viewport.rs
thegrid-workspace/crates/thegrid-net/: Cargo.toml
thegrid-workspace/crates/thegrid-net/src/: agent.rs  drive.rs  lib.rs  rdp.rs  tailscale.rs  termux_agent.rs  win_sys.rs  wol.rs
thegrid-workspace/crates/thegrid-node/: Cargo.toml
thegrid-workspace/crates/thegrid-node/src/: main.rs
thegrid-workspace/crates/thegrid-runtime/: Cargo.toml
thegrid-workspace/crates/thegrid-runtime/src/: compute_router.rs  lib.rs  runtime.rs
thegrid-workspace/fixtures/: hashes.json
thegrid-workspace/scripts/: cuda_media_analyze.py  gitupdate-node.ps1  install_explorer_context_menu.ps1  mesh_connection_smoke.ps1  upgrade_headless_node.ps1
thegrid-workspace/thegrid-workspace/crates/thegrid-core/: Cargo.toml
thegrid-workspace/thegrid-workspace/crates/thegrid-core/src/: db.rs  events.rs  watcher.rs
thegrid-workspace/thegrid-workspace/crates/thegrid-gui/src/: theme.rs
thegrid-workspace/thegrid-workspace/crates/thegrid-net/: Cargo.toml
