[package]
name        = "thegrid-ai"
version     = "0.1.0"
edition     = "2021"
description = "Semantic vector indexing for THE GRID (Phase 4 — stubs only)"

[dependencies]
thegrid-core = { path = "../thegrid-core" }
anyhow        = { workspace = true }
log           = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
reqwest       = { workspace = true }

# ── Phase 4 dependencies (stubbed for now to allow building without C++ tools) ──
# usearch     = "2.13"
# fastembed   = "4.5"
sysinfo     = "0.33"
