[package]
name        = "thegrid-ai"
version     = "0.1.0"
edition     = "2021"
description = "Semantic vector indexing and media analysis for THE GRID"

[dependencies]
thegrid-core = { path = "../thegrid-core" }
anyhow        = { workspace = true }
log           = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
reqwest       = { workspace = true }

# ── Phase 4 dependencies ────────────────────────────────────────────────────
# usearch     = "2.13"
# fastembed   = "4.5"
sysinfo     = "0.33"
# Basic image metadata extraction (no GPU required)
image       = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
kamadak-exif = "0.6"
