[package]
name = "thegrid-node"
version.workspace = true
edition.workspace = true
description = "Headless node for The Grid network"

[dependencies]
thegrid-core    = { path = "../thegrid-core" }
thegrid-net     = { path = "../thegrid-net" }
thegrid-runtime = { path = "../thegrid-runtime" }

# Shared dependencies from workspace
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
log        = { workspace = true }
chrono     = { workspace = true }
tokio      = { workspace = true }
reqwest    = { workspace = true }

# CLI specific
env_logger = "0.11"
hostname   = "0.4"
dirs       = "5"
ctrlc      = "3"
semver     = "1"
terminal_size = "0.3"
